# crackswarm

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
crates/crack-agent/: Cargo.toml
crates/crack-agent/src/: cache.rs  config.rs  connection.rs  lib.rs  main.rs  runner.rs  status.rs  tui.rs
crates/crack-common/: Cargo.toml
crates/crack-common/src/: auth.rs  error.rs  hashcat.rs  lib.rs  models.rs  protocol.rs
crates/crack-coord/: Cargo.toml
crates/crack-coord/src/: admin_token.rs  audit.rs  config.rs  last_seen.rs  lifecycle.rs  main.rs  monitor.rs  state.rs
crates/crack-coord/src/api/: campaigns.rs  files.rs  mod.rs  tasks.rs  workers.rs
crates/crack-coord/src/campaign/: analyzer.rs  engine.rs  mod.rs  templates.rs
crates/crack-coord/src/scheduler/: assigner.rs  chunker.rs  mod.rs
crates/crack-coord/src/storage/: db.rs  files.rs  mod.rs
crates/crack-coord/src/storage/db/: audit_log.rs  benchmarks.rs  campaigns.rs  chunks.rs  cracked.rs  enrollment.rs  files.rs  keyspace_cache.rs  phases.rs  refs_gc.rs  tasks.rs  worker_cache.rs  workers.rs
crates/crack-coord/src/transport/: handler.rs  mod.rs
crates/crack-coord/src/tui/: app.rs  event.rs  keys.rs  layout.rs  mod.rs  theme.rs
crates/crack-coord/src/tui/views/: audit.rs  campaigns.rs  help.rs  mod.rs  results.rs  tasks.rs  workers.rs
crates/crackctl/: Cargo.toml
crates/crackctl/src/: client.rs  display.rs  main.rs
docs/: demo.tape
migrations/: 001_init.sql
rules/: ATTRIBUTION.md
