[workspace]
resolver = "2"
members = [
    "crates/crack-common",
    "crates/crack-coord",
    "crates/crack-agent",
    "crates/crackctl",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Crypto / Security
snow = "0.9"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
hkdf = "0.12"
chacha20poly1305 = "0.10"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Cross-platform
dirs = "6"

# Internal crates
crack-common = { path = "crates/crack-common" }
crack-agent = { path = "crates/crack-agent" }
