[package]
name = "crack-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
snow = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
hkdf = { workspace = true }
chacha20poly1305 = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net"] }
