[package]
name = "crack-coord"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crack-coord"
path = "src/main.rs"

[dependencies]
crack-common = { workspace = true }
crack-agent = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
snow = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
hkdf = { workspace = true }
chacha20poly1305 = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
reqwest = { workspace = true }
tokio-util = { workspace = true }
