[package]
name = "crackctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crackctl"
path = "src/main.rs"

[dependencies]
crack-common = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
